Fix calendar events key, whitespace

--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   min-width: 300px;
   width: fit-content;
-  max-width: 400px;
+  max-width: 600px;
 }
 
 .center {
@@ -22,4 +22,8 @@
   padding-top: 24px;
   padding-bottom: 24px;
   text-align: center;
+}
+
+.calendar-desc {
+  white-space: pre-wrap;
 }
